--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url("https://spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");  /* 웹폰트*/
+@import url("fontello.css") ;    /* fontello 아이콘 사용하기*/
 /* 스타일 초기화 */
 *, *::before, *::after{
   box-sizing: border-box;
@@ -60,7 +61,7 @@ body{
 /* 로고 */
 .logo{
   position: absolute;
-  top: 45px;
+  top: 55px;
   left:65px;
 }
 /* 안내링크 */
@@ -91,31 +92,85 @@ body{
 }
 /* 메인 메뉴 */
 .menu{
-  background: linear-gradient(to bottom, #e8852e 0%,#ed552f 35%,#ed552f 70%,#e8852e 100%);/* linear 앞에 red 적으면 linear 지원안할때 빵강배경보임배경색 글라데이션*/
+  background:#e2572d linear-gradient(to bottom, #e8852e 0%,#ed552f 35%,#ed552f 70%,#e8852e 100%);/* linear 앞에 red 적으면 linear 지원안할때 빵강배경보임배경색 글라데이션*/
   margin-top: 10px;
   padding-left: 225px;
+  border-top:2px solid #000;
+  border-radius:0 0 5px 5px; 
 }
 .menu > li{
   float: left;
+  position: relative;  
 }
 .menu-item-text{
   font-size: 1.7rem;
   font-weight: 700;
   color:#fff;
-  padding: 1em 15px;
+  padding: 1em 18px;
   display: block;
   border-left: 1px solid #fff;
+  text-shadow: 1px 0 0 #000, 0 1px 0#000, -1px 0#000, 0 -1px 0#000;   /*  메뉴주변 검정 테두리 */
 }
-.sub-meu{
-  background-color: yellow;
-  position: absolute;
+.menu-act .menu-item-text{
+  color:#ff0;
+  position: relative;
+  }
+.menu-act .menu-item-text::after{
+  position: absolute;            /* ㅁㅔ뉴하단에 검정 선 생기게  */
+  width: calc(100% - 36px);
+  bottom: -2px;
+  content: "";
+  display: block;
+  border-top:2px solid #000; 
+
+}
+.sub-menu{
+ position: absolute;
+  white-space: nowrap;  /* 줄바꿈 금지 무조건 한줄로 보여라 블록 요소에서만 사용 */
+  top:60px;
   display: none;
 }
+.menu-act .sub-menu{
+  display: block;
+}
+.sub-menu1, .sub-menu2, .sub-menu3{
+  left:0;
+}
+.sub-menu4, .sub-menu5, .sub-menu6{
+  right:0;
+}
+.sub-menu li, .sub-menu a{
+  display: inline-block;
 
+}
+.sub-menu a{
+  padding: 10px 0;
+  margin-right:10px;
+}
 /*  비주얼 */
 .visual{
   height: 120px;
   }
+  @keyframes textAni{
+    0%{
+      font-size: 12px;
+      color: rgba(0,0,0,0);
+      transform: translate(0,0);
+    }
+    100%{
+      font-size: 24px;
+      color:rgba(0,0,0,1);
+      transform: translate(400px, 75px );
+    }
+  }
+  .visual-text{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    animation-name: textAni ;
+    animation-duration: 5s;
+    animation-fill-mode: forwards; 
+    background: yellow;
+    width: 545px;
+    }
   /* 메인 콘텐츠   */
 .main{
   background: lime;
