--- a/css/style.css
+++ b/css/style.css
@@ -40,12 +40,14 @@ body{
   color:#181818;
   font-size: 1.4rem;
   font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif'; 
-  font: weight:400;
+  font-weight:400;
+  line-height:1.15;
+  background: linear-gradient(to bottom, #ccc, #eee 45%, #fff 70%, #fff 100%);
 
   }
 /* 컨테이너 */
 .container{
-  background: linear-gradient(to bottom, #ccc, #eee 45%, #fff 70%, #fff 100%)
+  background: url("images/bg_flower.png") no-repeat 50% 0
 }
 .header, .visual, .main, .slogan, .footer{
   width: 940px; 
@@ -148,9 +150,7 @@ body{
   margin-right:10px;
 }
 /*  비주얼 */
-.visual{
-  height: 120px;
-  }
+
   @keyframes textAni{
     0%{
       font-size: 12px;
@@ -163,12 +163,47 @@ body{
       transform: translate(400px, 75px );
     }
   }
+  @keyframes flowerAni{
+    0%{
+      opacity: 1;
+    }
+    100%{
+      opacity: 0;
+    }
+  }
+  .visual{
+    height: 120px;
+    position: relative;
+    }
+  .visual::before,   .visual::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-repeat:no-repeat; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation-name:flowerAni;
+    animation-duration: 2s; 
+    animation-iteration-count: infinite;  /*무한반복*/
+    animation-direction: alternate;  /*애니메이션 부드럽게 순방향 역방향*/
+  } 
+  .visual::before{
+    background-image: url("images/ani_flower_01.png"), url("images/ani_flower_02.png");
+    background-position: 0 -10px, 670px 0;    /*배경이미지 위치*/
+    }
+  .visual::after{
+    background-image: url("images/ani_flower_03.png"), url("images/ani_flower_04.png");
+    background-position: 300px 0, 800px 0;    /*배경이미지 위치*/
+    animation-delay: 1s; /* 2초있다가 시작해라 */
+    animation-timing-function: ease-in-out;     }
   .visual-text{
     font-family: Georgia, 'Times New Roman', Times, serif;
     animation-name: textAni ;
     animation-duration: 5s;
     animation-fill-mode: forwards; 
-    background: yellow;
+   
     width: 545px;
     }
   /* 메인 콘텐츠   */
