--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a{
 }
 /*클래스모듈*/
 /* float 이슈를 해결하기 이한 clear 기능  모든 float 해제*/
-.Clearfix::after{
+.clearfix::after{
   content: ""; 
   display: block;
   clear: both;
@@ -210,7 +210,7 @@ body{
 .main{
   background: #fff;
   padding: 30px;
-  height:450px;
+  min-height:450px;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -311,4 +311,42 @@ body{
 .validation-list a::focus{
   color:red;
 }
-
+/* 웹 관련 용어 */
+.term{
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  background:#bbb linear-gradient(to bottom, #bbb, #eee);
+  padding: 10px 15px;
+}
+.term-heading{
+  font-size: 1.5rem;
+  font-weight:700;
+}
+.term-list{
+}
+.term-list > div{
+  margin-top: 10px;
+}
+.term-list-subject, .term-list-brief{
+  background-color: #e2572d;
+  width: 145px;
+  float:right;
+}
+.term-list-subject{
+  color:#296897;
+}
+.term-list-thumbnail{
+  float:left;
+}
+.term-list-thumbnail img{
+  vertical-align: middle;
+}
+.term-list-brief{
+  margin-top: 5px;
+  line-height: 1.5;
+}
+.even .term-list-subject, .even.term-list-brief{
+  background-color: #e2572d;
+  width: 145px;
+  float:left;
+}
