--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ a{
   display: block;
   clear: both;
 }
+/* 아이콘폰트글자색상 */
+.icon-plus::before{
+  color: hsla(110,70%,30%,1);
+}
 /*   기본스타일 */
 body{
   color:#181818;
@@ -103,6 +107,7 @@ body{
 .menu > li{
   float: left;
   position: relative;  
+  outline: 0;
 }
 .menu-item-text{
   font-size: 1.7rem;
@@ -313,6 +318,7 @@ body{
 }
 /* 웹 관련 용어 */
 .term{
+  margin-top: 20px;
   border: 1px solid #aaa;
   border-radius: 5px;
   background:#bbb linear-gradient(to bottom, #bbb, #eee);
@@ -321,8 +327,6 @@ body{
 .term-heading{
   font-size: 1.5rem;
   font-weight:700;
-}
-.term-list{
 }
 .term-list > div{
   margin-top: 10px;
@@ -358,9 +362,6 @@ body{
   padding: 15px 25px 10px; 
   background: #bbb linear-gradient(to bottom, #bbb, #fff)
 }
-.search-form{
-  
-}
 .search-form fieldset{
   border:0;
 }
@@ -382,4 +383,61 @@ body{
   height:24px;
   border-radius: 3px; 
 
+}
+/* 공지사항 및 자료실 */
+.board{
+  margin-top: 20px;
+  position: relative;
+}
+.tab{
+  background: #ccc linear-gradient(to bottom, #ccc, #eee);
+  position: absolute;
+  top:0;
+  border: 1px solid #aaa;
+  border-radius:5px 5px 0 0;
+  color:#666;
+  font-size:1.4rem;
+  font-weight:400; 
+  padding: 8px 15px;
+  cursor: pointer;
+  outline: 0;    /*마우스오버시 테두리 안보이게*/
+}
+.board-act .tab{
+  background: #fff;
+  color:#ed552f;
+  border-color:#ed552f #ed552f #fff #ed552f;
+}
+.notice-heading{
+  left: 0;
+}
+.pds-heading{
+  left:83px;
+}
+.board ul, .board a[class$="more"]{
+ display:none;
+}
+.board-act ul, .board-act a[class$="more"]{   /*활성화될때만 보아*/
+  display: block !important;
+}
+.board-act ul{
+  padding-top:45px; 
+}
+.board-act li{
+  display:flex;
+  margin: 10px 0;
+}
+.board-act ul a{
+  width:280px;
+  white-space: nowrap;       /*글자수 제한 위한 테그 줄바꿈 금지*/
+  overflow: hidden;         /*글자수 제한 위한 테그*/
+  text-overflow: ellipsis;  /*글자수 제한 위한 테그*/
+}
+.board-act time{
+  margin-left: auto;
+}
+.board-act a[class$="more"]{
+  position: absolute;
+  top:-8px;
+  right:-8px;
+  padding: 8px;
 }
